# issues-crawler

./: Cargo.toml  Rocket.toml
migrations/2020-12-12-224108_create_projects/: up.sql
migrations/2020-12-19-050106_create_issues/: up.sql
src/: handlers.rs  schema.rs  server.rs  types.rs
